--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,12 @@
 .App {
-  text-align: center;
+  /* text-align: center; */
 }
 
-.App-logo {
+button {
+  text-transform: none !important;
+}
+
+/* .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
@@ -11,17 +15,12 @@
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
+} */
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+
+
+/* .App-body {
+  height: 90vh;
 }
 
 .App-link {
@@ -35,4 +34,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
